# cloudsyaml

./: .gitignore  ChangeLog  README.md  setup.cfg
clouds/: __init__.py  arguments.py  listing.py  sdk.py  shell.py  utils.py
tests/: test_list.py
