[metadata]
name = cloudsyaml
description-file = README.md
author = Igor Tiunov
author-email = igor.tiunov@nexign.com
summary = Library and CLI for manage the clouds.yaml
home-page = http://github.com/itd27m01/cloudsyaml
license = MIT
classifier =
    Development Status :: 3 - Alpha
    License :: Other/Proprietary License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Intended Audience :: Developers
    Environment :: Console

[files]
packages = clouds

[entry_points]
console_scripts =
    clouds = clouds.shell:main

clouds.yaml =
    list   = clouds.listing:List
    show   = clouds.listing:Show
    create = clouds.mng:Create
    delete = clouds.mng:Delete
    update = clouds.mng:Update
    files  = clouds.sdk:Files

[wheel]
universal = 1

[bdist_rpm]
doc_files = README.md